<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/card_active"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="15dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.8"
                android:layout_marginTop="16dp"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_weight="1.9"
                    android:layout_height="0dp"
                    android:textColor="@color/header_text"
                    android:textSize="18sp"
                    android:text="@string/check_my_car_fluids_insolution" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".1"
                    android:background="@color/grey"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="30dp"
                android:background="@drawable/option"
                android:backgroundTint="@color/maruti_text"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:gravity="end|center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_below="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="2"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/maruti_text"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingStart="2dp"
                    android:text="@string/maruti_suzuki_s_presso" />
                <TextView
                    android:id="@+id/tvJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/address_job"
                    android:textSize="12sp"
                    android:gravity="start|center"
                    android:drawableLeft="@drawable/ic_baseline_location"
                    android:text="@string/job_id_25678" />
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/address_job"
                    android:textSize="12sp"
                    android:gravity="start|center"
                    android:drawableLeft="@drawable/ic_baseline_location"
                    android:text="@string/malviya_nagar_delhi" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="0dp"
                        android:layout_weight=".4"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_baseline_person_24"
                        android:background="@drawable/circular_shape"
                        />
                    <LinearLayout
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1.6"
                        android:gravity="center|start"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/john_smith"
                            />
                        <RatingBar
                            style = "?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:rating="3.5"
                            android:progressTint="@color/yellow"
                            android:secondaryProgressTint="@android:color/transparent"
                            />
                        <TextView
                            android:layout_marginTop="15dp"
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_baseline_watch12"
                            android:text="@string/_12_minutes_ago"
                            android:textSize="10sp"
                            android:textColor="#89becd"
                            android:gravity="center"
                            />


                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_below="@+id/ll2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/budget_600"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round3"
                android:layout_height="40dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/budget_600"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn2"
                android:layout_height="40dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/_10_days"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round_shape"
                android:layout_height="40dp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>